[BE] Feat: 관심작가 외 필요한 나머지 api들 개발 완료